fixed darkmode colours, overflow-x hidden

--- a/src/components/styles/HomePage.sass
+++ b/src/components/styles/HomePage.sass
@@ -1,9 +1,10 @@
 body
-  background: #121212
   display: flex
   flex-direction: column
   align-items: center
   color: rgba(255, 255, 255, 0.87)
+  font-family: 'Roboto', sans-serif
+  overflow-x: hidden
 
 a, a:visited, a:hover, a:active
   color: inherit
@@ -24,12 +25,11 @@ li
 body
   margin: 0
   padding: 0
-  overflow: hidden
-  font-family: "Roboto Light", sans-serif
+  background: #202124
+  font-family: "Roboto", sans-serif
 
 .app
-  /*background: linear-gradient(180deg, whitesmoke 0%, white 85%);*/
-  background: #0d1117
+  //background: linear-gradient(180deg, #202124 0%, #050505 85%)
   width: 100vw
   height: 100vw
   display: flex
