--- a/src/components/styles/MainPostsDisplay.sass
+++ b/src/components/styles/MainPostsDisplay.sass
@@ -1,6 +1,6 @@
 #main-profile-display
   width: 150px
-  position: relative
+  position: fixed
   top: +75px
   left: -100px
   opacity: 0
