--- a/src/components/styles/NavBar.sass
+++ b/src/components/styles/NavBar.sass
@@ -1,6 +1,7 @@
 
 
 nav
+  background: #202124
   position: fixed
   top: 0
   left: 0
@@ -9,8 +10,7 @@ nav
   align-items: center
   width: 100vw
   height: 80px
-  background: rgba(31, 31, 31, 0.54)
-  border-bottom: solid 1px black
+  border-bottom: solid 1px #3c4043
 
 #nav-content
   display: flex
@@ -29,3 +29,9 @@ nav
 
     li:hover
       opacity: 0.5
+
+#nav-left
+  display: flex
+  align-items: center
+  justify-content: space-between
+  width: 300px
