--- a/src/components/styles/NewPost.sass
+++ b/src/components/styles/NewPost.sass
@@ -1,8 +1,8 @@
 .post
-  background: rgba(31, 31, 31, 0.54)
-  border-radius: 5px
+  background: #202124
+  border-radius: 3px
   margin-top: 50px
-  border: 1px solid black
+  border: 1px solid #3c4043
   width: 550px
   height: 750px
   overflow: hidden
